# datarepo

./: .coverage  .gitignore  404.html  CNAME  LICENSE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build_and_publish.yml  test-workflow-dispatch.yml
.stoat/: config.yaml
api-docs/: index.html
catalog/: index.html
client/: pyproject.toml
client/neuralake/: roapi_export.py  web_export.py
client/neuralake/core/: __init__.py
client/neuralake/core/catalog/: __init__.py  catalog.py
client/neuralake/core/dataframe/: frame.py
client/neuralake/core/tables/: __init__.py  decorator.py  deltalake_table.py  filters.py  parquet_table.py
client/neuralake/export/: __init__.py
client/neuralake/export/static_site/: .gitignore  README.md  build.py  cli.js  package-lock.json  package.json  vite.config.ts
client/neuralake/export/static_site/scripts/: serve.js
client/neuralake/export/static_site/src/components/: CodeBlock.tsx  FuzzySearchBox.tsx  Sidebar.tsx
client/neuralake/export/static_site/src/lib/: data.ts  types.ts  useThrottle.ts
client/neuralake/export/static_site/src/pages/: index.tsx
client/neuralake/test/: test_core.py
client/neuralake/test/data/: database.py  database2.py
client/neuralake/test/roapi/: test_roapi.py
client/neuralake/test/roapi/data/: database.py
client/neuralake/test/tables/: test_parquet_table.py  test_table.py
docs/: README.md  api-docs.md  catalog.md  getting-started.md  hooks.py  user-guide.md
docs/examples/: data.json  generate_tcph_site.py  generate_tpc_site.py  tcph_catalog.py  tcph_tables.py  tpc_catalog.py  tpcds_tables.py
docs/stylesheets/: extra.css
examples/: generate_tpc_site.py  tpcds_tables.py  tpch_tables.py
examples/web_catalog/: data.json  index.html
examples/web_catalog/assets/: abap-DsBKuouk.js  abap-DsBKuouk.js.map  actionscript-3-D_z4Izcz.js  actionscript-3-D_z4Izcz.js.map  ada-727ZlQH0.js  ada-727ZlQH0.js.map  andromeeda-C3khCPGq.js  andromeeda-C3khCPGq.js.map  angular-html-LfdN0zeE.js  angular-html-LfdN0zeE.js.map  angular-ts-CKsD7JZE.js  angular-ts-CKsD7JZE.js.map  apache-Dn00JSTd.js  apache-Dn00JSTd.js.map  apex-COJ4H7py.js  apex-COJ4H7py.js.map  apl-BBq3IX1j.js  apl-BBq3IX1j.js.map  applescript-Bu5BbsvL.js  applescript-Bu5BbsvL.js.map  ara-7O62HKoU.js  ara-7O62HKoU.js.map  asciidoc-BPT9niGB.js  asciidoc-BPT9niGB.js.map  asm-Dhn9LcZ4.js  asm-Dhn9LcZ4.js.map  astro-CqkE3fuf.js  astro-CqkE3fuf.js.map  aurora-x-D-2ljcwZ.js.map  awk-eg146-Ew.js  awk-eg146-Ew.js.map  ayu-dark-Cv9koXgw.js.map  ballerina-Du268qiB.js  ballerina-Du268qiB.js.map  bat-fje9CFhw.js  bat-fje9CFhw.js.map  beancount-BwXTMy5W.js  beancount-BwXTMy5W.js.map  berry-3xVqZejG.js  berry-3xVqZejG.js.map  (+461 more)
javascripts/: shortcuts.js
search/: search_index.json
src/datarepo/: __init__.py
src/datarepo/core/: __init__.py
src/datarepo/core/catalog/: __init__.py  catalog.py
src/datarepo/core/dataframe/: __init__.py
src/datarepo/core/tables/: __init__.py  clickhouse_table.py  decorator.py  deltalake_table.py  filters.py  metadata.py  parquet_table.py  util.py
src/datarepo/export/: roapi.py  web.py
src/datarepo/export/static_site/: .gitignore  README.md  build.py  package-lock.json  package.json
src/datarepo/export/static_site/src/: index.html  router.tsx
src/datarepo/export/static_site/src/components/: FuzzySearchBox.module.css  MobileMenu.tsx  Sidebar.tsx  TextWithHighlights.tsx
src/datarepo/export/static_site/src/lib/: codegen.ts  data.ts  fuzzy-search.ts  types.ts
src/datarepo/export/static_site/src/pages/: index.tsx
src/datarepo/export/static_site/src/pages/[catalogKey]/[databaseKey]/: index.tsx
src/datarepo/export/static_site/src/plugins/: data-json-plugin.js
src/neuralake/: __init__.py
src/neuralake/core/dataframe/: __init__.py  frame.py
src/neuralake/core/tables/: __init__.py  decorator.py  deltalake_table.py  filters.py  metadata.py  util.py
src/neuralake/export/: web.py
src/neuralake/export/static_site/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/neuralake/export/static_site/src/: index.html  router.tsx
src/neuralake/export/static_site/src/components/: ArrowTypeView.tsx  CodeBlock.tsx  FuzzySearchBox.tsx  SyntaxHighlightedCode.tsx
src/neuralake/export/static_site/src/lib/: data.ts
src/neuralake/export/static_site/src/pages/: index.tsx
src/neuralake/export/static_site/src/pages/[catalogKey]/: index.tsx
src/neuralake/export/static_site/src/pages/[catalogKey]/[databaseKey]/[tableKey]/: index.tsx
src/neuralake/export/static_site/src/styles/: global.css
test/: test_core.py
test/data/: database.py  database2.py
test/roapi/: test_roapi.py
test/roapi/data/: database.py
test/tables/: test_clickhouse_table.py  test_deltalake_table.py  test_parquet_table.py  test_table.py  test_util.py
user-guide/: index.html
web_catalog/: .gitignore  package.json  tsconfig.json
web_catalog/src/components/: FuzzySearchBox.module.css
web_catalog/src/lib/: codegen.ts  fuzzy-search.ts
web_catalog/src/pages/[catalogKey]/: index.tsx
web_catalog/src/pages/[catalogKey]/[databaseKey]/: index.tsx
