[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralake"
version = "0.2.2"
description = "A simple platform for complex data"
readme = "../docs/README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Gautham Acharya", email = "gautacharya@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "boto3==1.26.20",
    "deltalake==0.25.4",
    "polars==1.9.0",
    "pyarrow==17.0.0",
    "ipython==8.5.0",
    "typing_extensions==4.13.2",
]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocstrings",
    "mkdocstrings-python>=1.7.0",
    "pytest>=7.0.0",
    "mkdocs-material>=9.6.14",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["neuralake"]
only-include = ["neuralake"]
include = [
    "neuralake/export/js/web_catalog/package.json",
    "neuralake/export/js/web_catalog/cli.js",
    "neuralake/export/js/web_catalog/src/**/*",
    "../docs/README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Homepage = "https://github.com/neuralinkcorp/neuralake_client"
Issues = "https://github.com/neuralinkcorp/neuralake_client/issues"
